# enigmaticenclave

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE
include/: creature.h  entity.h  flora.h  game.h  item.h  player.h  terminal.h
src/: game.cpp  main.cpp  terminal.cpp
src/assets/: crt_shader.frag  vertex_shader.vert
